--- a/LUM/templates/tours_list.html
+++ b/LUM/templates/tours_list.html
@@ -1,10 +1,17 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends 'default.html' %}
 
-</body>
-</html>
+{% block content %}
+
+{% block tours_list %}
+{% if tours %}
+    {% for tour in tours %}
+        {% tour.tour_name %}
+        {% tour.tour_description %}
+        {% tour.tour_content_type %}
+        {% tour.tour_img %}
+{% else %}
+    Экскурсий пока нет
+{% endfor %}
+{% endif %}
+{% endblock %}
+{% endblock content  %}
