--- a/LUM/templates/default.html
+++ b/LUM/templates/default.html
@@ -7,6 +7,8 @@
 <body>
 {% block tours_list %} {%endblock%}
 {% block tour_detail %} {%endblock%}
+{% block drop_down %} {%endblock%}
+
 
 </body>
 </html>{
