--- a/LUM/miniapp/templates/default.html
+++ b/LUM/miniapp/templates/default.html
@@ -5,7 +5,6 @@
     <meta charset="UTF-8">
     <title>LUM</title>
 
-    <!-- Подключение CSS -->
     <link rel="stylesheet" href="{% static 'miniapp/css/stories.css' %}">
 </head>
 <body>
@@ -18,7 +17,6 @@
                 <img src="{{ story.content_image.url }}" alt="{{ story.title }}">
 
             {% elif story.story_type == 'video' %}
-                <!-- показываем картинку-превью для видео -->
                 <img src="{{ story.content_image.url }}"
                      alt="{{ story.title }}"
                      data-video="{{ story.content_video.url }}">
@@ -37,18 +35,17 @@
 <!-- Модалка -->
 <div id="storyModal" class="modal">
     <span class="close-btn" onclick="closeStory()">&times;</span>
+    <div class="progress-container" id="progressContainer"></div>
     <div class="modal-content" id="modalContent"></div>
     <span class="nav-arrow left" onclick="prevStory()">&#10094;</span>
     <span class="nav-arrow right" onclick="nextStory()">&#10095;</span>
 </div>
 
-<!-- Блоки наследования -->
 {% block stories %}{% endblock %}
 {% block tours_list %}{% endblock %}
 {% block tour_detail %}{% endblock %}
 {% block drop_down %}{% endblock %}
 
-<!-- Подключение JS -->
 <script src="{% static 'miniapp/js/stories.js' %}"></script>
 </body>
 </html>
