--- a/LUM/miniapp/templates/profile.html
+++ b/LUM/miniapp/templates/profile.html
@@ -1,1 +1,22 @@
 {% extends 'default.html' %}
+{% load static %}
+
+{% block tour_detail %}
+<link rel="stylesheet" href="{% static 'miniapp/css/profile.css' %}">
+
+<div class="profile-container">
+    <a href="{% url 'tour-list' %}" class="back-btn">←</a>
+
+    <div class="profile-header">
+        <img src="{% static 'miniapp/img/profile_placeholder.png' %}" alt="Аватар" class="profile-avatar">
+        <h1 class="profile-name">{{ profile.first_name }} {{ profile.last_name }}</h1>
+        <p class="profile-info">
+            <strong>Логин:</strong> {{ profile.user.username }} <br>
+            <strong>Телефон:</strong> {{ profile.phone_number|default:"Не указан" }}
+        </p>
+
+        <!-- 🔥 Кнопка редактирования -->
+        <a href="{% url 'profile-edit' profile.pk %}" class="edit-btn">Редактировать</a>
+    </div>
+</div>
+{% endblock %}
