--- a/LUM/miniapp/templates/default.html
+++ b/LUM/miniapp/templates/default.html
@@ -69,5 +69,7 @@
 </div>
 
 <script src="{% static 'miniapp/js/stories.js' %}"></script>
+<script src="https://telegram.org/js/telegram-web-app.js"></script>
+
 </body>
 </html>
