--- a/LUM/miniapp/templates/default.html
+++ b/LUM/miniapp/templates/default.html
@@ -48,6 +48,7 @@
 {% block tours_list %}{% endblock %}
 {% block tour_detail %}{% endblock %}
 {% block drop_down %}{% endblock %}
+{% block quiz %} {% endblock %}
 
 <!-- 🔥 Нижняя панель навигации -->
 <div class="bottom-nav">
